// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component GameCard renders VIP card for VIP user correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 339,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "a",
      }
    }
    style={
      Array [
        Object {
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "height": 278.432,
          "width": 339,
        },
      ]
    }
  />
  <View
    marginTop={12}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 70,
          "justifyContent": "center",
          "marginHorizontal": 6,
          "marginTop": 24,
        },
      ]
    }
  >
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#222222"
      fontFamily="SEMI BOLD"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      numberOfLines={2}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "Calibre-Semibold",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 8,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 10,
          "marginVertical": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(96,202,142,1)",
          "borderRadius": 80,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 8,
          "opacity": 1,
          "width": 280,
        }
      }
      testID="play-button"
    >
      <View
        borderRadius={40}
        colorScheme="rgba(128,229,173,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(128,229,173,1)",
              "borderRadius": 80,
              "height": 86,
              "justifyContent": "center",
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          borderRadius={40}
          colorScheme="rgba(114,213,158,1)"
          height={48}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(114,213,158,1)",
                "borderRadius": 100,
                "height": 82,
                "justifyContent": "center",
                "marginTop": 8,
                "width": 274,
              },
            ]
          }
          width={140}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              Play
            </Text>
            <Image
              marginHorizontal={5}
              resizeMode="contain"
              size={29}
              source={1}
              style={
                Array [
                  Object {
                    "height": 43.5,
                    "marginHorizontal": 7.5,
                    "width": 43.5,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="BOLD"
                isUnderlined={false}
                isUppercase={false}
                marginTop={5}
                maxFontSizeMultiplier={1.3}
                size="SMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "CalibreBold",
                      "fontSize": 27,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginHorizontal": 7.5,
                      "marginTop": 10,
                    },
                  ]
                }
              >
                100
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 24,
        "marginTop": 16,
        "opacity": 1,
        "position": "absolute",
        "right": 12,
      }
    }
    testID="info-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={24}
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "width": 36,
          },
        ]
      }
    />
  </View>
  <View
    resizeMode="contain"
    source={1}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "left": -12,
          "position": "absolute",
          "top": 380.148,
        },
      ]
    }
    width={363}
  >
    <Image
      bannerType="STAR"
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 66.37714285714286,
            "width": 363,
          },
        ]
      }
      width={363}
    />
    <Text
      alignCenter={false}
      allowFontScaling={false}
      bannerType="STAR"
      color="#000000"
      fontFamily="BOLD"
      fontSize={22}
      isUnderlined={false}
      isUppercase={true}
      maxFontSizeMultiplier={1.3}
      size="XSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "CalibreBold",
            "fontSize": 24,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "uppercase",
          },
          Object {
            "color": "#FFFFFF",
            "letterSpacing": 1.5,
            "position": "absolute",
          },
        ]
      }
    >
      VIP
    </Text>
  </View>
</View>
`;

exports[`Component GameCard renders VIP card for non-VIP user correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 339,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "a",
      }
    }
    style={
      Array [
        Object {
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "height": 278.432,
          "width": 339,
        },
      ]
    }
  />
  <View
    marginTop={8}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 70,
          "justifyContent": "center",
          "marginHorizontal": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#222222"
      fontFamily="SEMI BOLD"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      numberOfLines={2}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "Calibre-Semibold",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 8,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 10,
          "marginVertical": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(96,202,142,1)",
          "borderRadius": 80,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 24,
          "opacity": 1,
          "width": 280,
        }
      }
      testID="play-button"
    >
      <View
        borderRadius={40}
        colorScheme="rgba(128,229,173,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(128,229,173,1)",
              "borderRadius": 80,
              "height": 86,
              "justifyContent": "center",
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          borderRadius={40}
          colorScheme="rgba(114,213,158,1)"
          height={48}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(114,213,158,1)",
                "borderRadius": 100,
                "height": 82,
                "justifyContent": "center",
                "marginTop": 8,
                "width": 274,
              },
            ]
          }
          width={140}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              Play
            </Text>
            <Image
              marginHorizontal={5}
              resizeMode="contain"
              size={29}
              source={1}
              style={
                Array [
                  Object {
                    "height": 43.5,
                    "marginHorizontal": 7.5,
                    "width": 43.5,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="BOLD"
                isUnderlined={false}
                isUppercase={false}
                marginTop={5}
                maxFontSizeMultiplier={1.3}
                size="SMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "CalibreBold",
                      "fontSize": 27,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginHorizontal": 7.5,
                      "marginTop": 10,
                    },
                  ]
                }
              >
                100
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "borderBottomWidth": 3,
                      "borderColor": "#F06B59",
                      "height": 1,
                      "position": "absolute",
                      "width": "85%",
                    },
                  ]
                }
                width="85%"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "position": "absolute",
                  "right": -7.5,
                  "top": -50,
                },
              ]
            }
            top={-25}
          >
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginHorizontal": 10,
                    "marginVertical": 10,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(95,110,175,1)",
                    "borderRadius": 48,
                    "height": 50,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 280,
                  }
                }
                testID="overlay-button"
              >
                <View
                  borderRadius={24}
                  colorScheme="rgba(140,158,221,1)"
                  height={25}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(140,158,221,1)",
                        "borderRadius": 48,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 274,
                      },
                    ]
                  }
                  width={140}
                >
                  <View
                    borderRadius={24}
                    colorScheme="rgba(124,137,216,1)"
                    height={25}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "rgba(124,137,216,1)",
                          "borderRadius": 68,
                          "height": 36,
                          "justifyContent": "center",
                          "marginTop": 8,
                          "width": 274,
                        },
                      ]
                    }
                    width={140}
                  >
                    <Text
                      alignCenter={false}
                      allowFontScaling={true}
                      color="#FFFFFF"
                      fontFamily="BOLD ITALIC"
                      isUnderlined={false}
                      isUppercase={false}
                      marginTop={2}
                      maxFontSizeMultiplier={1.3}
                      size="SMALL"
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "CalibreBoldItalic",
                            "fontSize": 27,
                            "justifyContent": "center",
                            "textAlign": "left",
                            "textDecorationColor": "#FFFFFF",
                            "textDecorationLine": "none",
                            "textDecorationStyle": "solid",
                            "textTransform": "none",
                          },
                          Object {
                            "marginHorizontal": 7.5,
                            "marginTop": 4,
                          },
                        ]
                      }
                    >
                      Become a VIP
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 24,
        "marginTop": 16,
        "opacity": 1,
        "position": "absolute",
        "right": 12,
      }
    }
    testID="info-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={24}
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "width": 36,
          },
        ]
      }
    />
  </View>
  <View
    resizeMode="contain"
    source={1}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "left": -12,
          "position": "absolute",
          "top": 380.148,
        },
      ]
    }
    width={363}
  >
    <Image
      bannerType="STAR"
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "height": 66.37714285714286,
            "width": 363,
          },
        ]
      }
      width={363}
    />
    <Text
      alignCenter={false}
      allowFontScaling={false}
      bannerType="STAR"
      color="#000000"
      fontFamily="BOLD"
      fontSize={22}
      isUnderlined={false}
      isUppercase={true}
      maxFontSizeMultiplier={1.3}
      size="XSMALL"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "CalibreBold",
            "fontSize": 24,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#000000",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "uppercase",
          },
          Object {
            "color": "#FFFFFF",
            "letterSpacing": 1.5,
            "position": "absolute",
          },
        ]
      }
    >
      VIP
    </Text>
  </View>
</View>
`;

exports[`Component GameCard renders free card correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 339,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "a",
      }
    }
    style={
      Array [
        Object {
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "height": 278.432,
          "width": 339,
        },
      ]
    }
  />
  <View
    marginTop={8}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 70,
          "justifyContent": "center",
          "marginHorizontal": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#222222"
      fontFamily="SEMI BOLD"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      numberOfLines={2}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "Calibre-Semibold",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 8,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 10,
          "marginVertical": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(96,202,142,1)",
          "borderRadius": 80,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 24,
          "opacity": 1,
          "width": 280,
        }
      }
      testID="play-button"
    >
      <View
        borderRadius={40}
        colorScheme="rgba(128,229,173,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(128,229,173,1)",
              "borderRadius": 80,
              "height": 86,
              "justifyContent": "center",
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          borderRadius={40}
          colorScheme="rgba(114,213,158,1)"
          height={48}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(114,213,158,1)",
                "borderRadius": 100,
                "height": 82,
                "justifyContent": "center",
                "marginTop": 8,
                "width": 274,
              },
            ]
          }
          width={140}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              Play
            </Text>
            <Image
              marginHorizontal={5}
              resizeMode="contain"
              size={29}
              source={1}
              style={
                Array [
                  Object {
                    "height": 43.5,
                    "marginHorizontal": 7.5,
                    "width": 43.5,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="BOLD"
                isUnderlined={false}
                isUppercase={false}
                marginTop={5}
                maxFontSizeMultiplier={1.3}
                size="SMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "CalibreBold",
                      "fontSize": 27,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginHorizontal": 7.5,
                      "marginTop": 10,
                    },
                  ]
                }
              >
                100
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderBottomWidth": 3,
                    "borderColor": "#F06B59",
                    "height": 1,
                    "position": "absolute",
                    "width": "85%",
                  },
                ]
              }
              width="85%"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "position": "absolute",
                  "right": -7.5,
                  "top": -50,
                },
              ]
            }
            top={-25}
          >
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginHorizontal": 10,
                    "marginVertical": 10,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(197,78,62,1)",
                    "borderRadius": 80,
                    "height": 50,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 130,
                  }
                }
                testID="overlay-button"
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(255,132,115,1)"
                  height={25}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(255,132,115,1)",
                        "borderRadius": 80,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 124,
                      },
                    ]
                  }
                  width={65}
                >
                  <View
                    borderRadius={40}
                    colorScheme="rgba(240, 107, 89, 1)"
                    height={25}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "rgba(240, 107, 89, 1)",
                          "borderRadius": 100,
                          "height": 36,
                          "justifyContent": "center",
                          "marginTop": 8,
                          "width": 124,
                        },
                      ]
                    }
                    width={65}
                  >
                    <Text
                      alignCenter={false}
                      allowFontScaling={true}
                      color="#FFFFFF"
                      fontFamily="BOLD ITALIC"
                      isUnderlined={false}
                      isUppercase={false}
                      marginTop={2}
                      maxFontSizeMultiplier={1.3}
                      size="SMALL"
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "CalibreBoldItalic",
                            "fontSize": 27,
                            "justifyContent": "center",
                            "textAlign": "left",
                            "textDecorationColor": "#FFFFFF",
                            "textDecorationLine": "none",
                            "textDecorationStyle": "solid",
                            "textTransform": "none",
                          },
                          Object {
                            "marginHorizontal": 7.5,
                            "marginTop": 4,
                          },
                        ]
                      }
                    >
                      FREE!
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 24,
        "marginTop": 16,
        "opacity": 1,
        "position": "absolute",
        "right": 12,
      }
    }
    testID="info-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={24}
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "width": 36,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Component GameCard renders regular card correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 339,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "a",
      }
    }
    style={
      Array [
        Object {
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "height": 278.432,
          "width": 339,
        },
      ]
    }
  />
  <View
    marginTop={12}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 70,
          "justifyContent": "center",
          "marginHorizontal": 6,
          "marginTop": 24,
        },
      ]
    }
  >
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#222222"
      fontFamily="SEMI BOLD"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      numberOfLines={2}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "Calibre-Semibold",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "marginTop": 8,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 10,
          "marginVertical": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(96,202,142,1)",
          "borderRadius": 80,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 8,
          "opacity": 1,
          "width": 280,
        }
      }
      testID="play-button"
    >
      <View
        borderRadius={40}
        colorScheme="rgba(128,229,173,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(128,229,173,1)",
              "borderRadius": 80,
              "height": 86,
              "justifyContent": "center",
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          borderRadius={40}
          colorScheme="rgba(114,213,158,1)"
          height={48}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(114,213,158,1)",
                "borderRadius": 100,
                "height": 82,
                "justifyContent": "center",
                "marginTop": 8,
                "width": 274,
              },
            ]
          }
          width={140}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              Play
            </Text>
            <Image
              marginHorizontal={5}
              resizeMode="contain"
              size={29}
              source={1}
              style={
                Array [
                  Object {
                    "height": 43.5,
                    "marginHorizontal": 7.5,
                    "width": 43.5,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="BOLD"
                isUnderlined={false}
                isUppercase={false}
                marginTop={5}
                maxFontSizeMultiplier={1.3}
                size="SMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "CalibreBold",
                      "fontSize": 27,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginHorizontal": 7.5,
                      "marginTop": 10,
                    },
                  ]
                }
              >
                100
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 24,
        "marginTop": 16,
        "opacity": 1,
        "position": "absolute",
        "right": 12,
      }
    }
    testID="info-button"
  >
    <Image
      opacity={1}
      resizeMode="contain"
      size={24}
      source={1}
      style={
        Array [
          Object {
            "height": 36,
            "width": 36,
          },
        ]
      }
    />
  </View>
</View>
`;
